<resources>
    <string name="app_name">Find All Stay</string>

    <string name="back4app_server_url" translatable="false">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id" translatable="false"><!--Your app id here--></string>
    <string name="back4app_client_key" translatable="false"><!--Your client key here--></string>

    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_mobile">Enter Your Mobile</string>
    <string name="enter_your_email_optional">Enter Your Email(Optional)</string>


    <!--not in use-->
    <string name="new_here_sign_up"><u>New here? Sign UP</u></string>
    <string name="login">LOGIN</string>

    <string name="do_not_have_account">Don\'t have an account? Sign Up</string>
    <string name="dalready_have_account">Already have an account? Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="login2">Lgin</string>
    <string name="sign_up">SIGN UP</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="wishlist">Wishlist</string>

    <string name="wish_list_fragment">Wish List fragment</string>
    <string name="add_stay_fragment">Add Stay fragment</string>
    <string name="login_fragment">Login Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_into_your_fas_account">Sign Into your FAS account</string>
    <string name="hello">Hello,</string>
    <string name="sign_up_to_get_fas">Sign Up to get FAS</string>

</resources>