<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.SignUpFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtHello"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            android:layout_marginTop="@dimen/dp32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/hello"
            android:textSize="@dimen/sp18"
            android:textStyle="bold"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtsignUpInfo"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            android:layout_marginTop="@dimen/dp4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHello"
            tools:text="@string/sign_up_to_get_fas"
            android:textSize="@dimen/sp14"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernamelayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60"
            android:layout_marginTop="@dimen/dp32"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            android:baselineAligned="false"
            android:hint="@string/enter_your_name"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtsignUpInfo"
            app:layout_constraintStart_toStartOf="@+id/txtsignUpInfo"
            app:layout_constraintTop_toBottomOf="@+id/txtsignUpInfo">
            <!-- app:layout_constraintTop_toBottomOf="@+id/back"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/sp14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etMobileLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp60"
            android:layout_marginTop="@dimen/dp32"
            android:baselineAligned="false"
            android:hint="@string/enter_your_mobile"
            android:maxLength="10"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/usernamelayout"
            app:layout_constraintStart_toStartOf="@+id/usernamelayout"
            app:layout_constraintTop_toBottomOf="@+id/usernamelayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/sp14" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailIdLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp60"
            android:layout_marginTop="@dimen/dp32"
            android:baselineAligned="false"
            android:hint="@string/enter_your_email_optional"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/etMobileLayout"
            app:layout_constraintStart_toStartOf="@+id/etMobileLayout"
            app:layout_constraintTop_toBottomOf="@+id/etMobileLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/sp14" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp60"
            android:layout_marginTop="@dimen/dp32"
            android:baselineAligned="false"
            android:hint="@string/enter_your_password"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/etEmailIdLayout"
            app:layout_constraintStart_toStartOf="@+id/etEmailIdLayout"
            app:layout_constraintTop_toBottomOf="@+id/etEmailIdLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/sp14" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/etPasswordLayout"
            app:layout_constraintStart_toStartOf="@+id/etPasswordLayout"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:gravity="start"
            android:text="@string/dalready_have_account"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>