<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.SignUpActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp" />

        </androidx.appcompat.widget.Toolbar>
        <!--app:logo="@mipmap/ic_launcher"-->

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0.50dp"
            android:background="#8D8D8D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_signup" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernamelayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:baselineAligned="false"
            android:hint="@string/enter_your_name"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view">
            <!-- app:layout_constraintTop_toBottomOf="@+id/back"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etMobileLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:baselineAligned="false"
            android:hint="@string/enter_your_mobile"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/usernamelayout"
            app:layout_constraintStart_toStartOf="@+id/usernamelayout"
            app:layout_constraintTop_toBottomOf="@+id/usernamelayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailIdLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:baselineAligned="false"
            android:hint="@string/enter_your_email_optional"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/etMobileLayout"
            app:layout_constraintStart_toStartOf="@+id/etMobileLayout"
            app:layout_constraintTop_toBottomOf="@+id/etMobileLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:baselineAligned="false"
            android:hint="@string/enter_your_password"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/etEmailIdLayout"
            app:layout_constraintStart_toStartOf="@+id/etEmailIdLayout"
            app:layout_constraintTop_toBottomOf="@+id/etEmailIdLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"-->


        <Button
            android:id="@+id/signup"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/etPasswordLayout"
            app:layout_constraintStart_toStartOf="@+id/etPasswordLayout"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:gravity="start"
            android:text="@string/do_not_have_account"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>